--- a/AuidoChat/SignalRCoreWebRTC/Views/Home/Index.cshtml
+++ b/AuidoChat/SignalRCoreWebRTC/Views/Home/Index.cshtml
@@ -56,7 +56,21 @@
             <button type="button" class="btn btn-dark">Connection Type <span class="badge badge-secondary">Audio</span></button>
         </div>
     </div>
+    <div class="span9">
+        <div class="row-fluid">
+            @*<div class="span6">
+                    <h4>You</h4>
+                    <video class="video mine cool-background" autoplay="autoplay"></video>
+                </div>*@
+            <div class="span6">
+                <h4>Partner</h4>
+                <audio class="audio partner" autoplay="" controls=""></audio>
+                @*<video class="video partner cool-background" autoplay="autoplay"></video>*@
+            </div>
+        </div>
+    </div>
 </div>
+
 <!-- Footer -->
 <hr>
 <footer>
